<resources>
    <string name="app_name">BusinezApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="referal_code">Referal code</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="home">Home</string>
    <string name="setting">Settings</string>
    <string name="business">My business</string>
    <string name="profile">Me</string>
    <string name="support">Support</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="logout_title">Logout</string>
    <string name="title">Logout</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="logout_description">Are you sure  you want to logout?</string>
    <string name="select_places">Select place you want</string>
    <string name="selecLanguages">Select your language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>