<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/home"
        android:enabled="true"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/setting"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_baseline_settings_24"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/shopfragment"
        android:title="@string/business"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/user"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/supportFragment"
        android:title="@string/support"
        android:icon="@drawable/customer_service"
        android:menuCategory="secondary"/>

</menu>