<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.ReferalActivity">

        <View
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/app_color"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/dp200"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp70"
            android:src="@drawable/img_white_appname"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginTop="@dimen/dp200"
            android:layout_marginRight="@dimen/dp20"
            android:background="@drawable/round_card"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp35" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editor_background"
                android:hint="@string/referal_code"
                android:singleLine="true" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp35" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editor_background"
                android:hint="@string/location"
                android:singleLine="true" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp35" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editor_background"
                android:hint="@string/language"
                android:singleLine="true" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp35" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textColor="@color/app_color"
                app:buttonTint="@color/app_color" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp35" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:backgroundTint="@color/app_color"
                android:text="Submit"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/dp10" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>